fix text wrapping in reviews

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -157,6 +157,7 @@ body {
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
+  word-wrap: break-word ;
 }
 
 .review h4 {
